--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -33,7 +33,7 @@
 \newversion{v0.1.3 2018/04/20}
     \change{Added custom dynamic figure path \refKey{figure root directory}.}
     \change{Fixed bugs related to \refCom*{phead} and the commands used in \refCom{makeset}-lists.}
-\newversion{@@VERISION @@DATE}
+\newversion{V0.1.4 2018/04/28}
     % \change{Introduced solutions only: \refCom{SolutionsOnly}}
     \change{Updated margins a lot!}
     \change{Fixed sneaky space in translation}
@@ -43,5 +43,9 @@
     \change{Iteration over items now uses a more lighweight approach.}
     \change{For commands that takes `lists' as arguments (\refCom{makeset}, \refCom{select} and \refCom{exclude}), the last item of the list can be terminated with new line or spaces without problems.}
     \change{For commands that takes `lists' as arguments, the entries in the list are now trimmed whitespaces on both sides.}
+\newversion{v0.2.0 2018/07/21}
     \change{Fixed bug where \refCom{ppref} did not reference letter in part problem.}
+    \change{Introducing \refCom{buildsets}-command for building more than one set at a time.}
+    \change{Ability to add front page with the \refKey{front page} setup-key.}
+    \change{You can now remove the forced margin setup with \refKey{style margins}.}
 \chlogtable
