--- a/docs/intro.tex
+++ b/docs/intro.tex
@@ -105,7 +105,13 @@ your main file to display them.
 
 \subsection{Using \dac{At}}
 \subsubsection{Making your own front page for a set}
-To create your own front page for each set, you'd use\\ \dac{At}\dac{StartBuildset}\brackets{\meta{FrontPageContents}}. Anything you send in to \dac{At}\dac{StartBuildset} will be executed before the first problem starts:
+
+To create your own front page for each set, you could use the \refKey{front page} key:
+\begin{dispListing}
+  \exercisebanksetu{front page={path/to/file.tex}}
+\end{dispListing}\\
+
+To illustrate how the \dac{At} command works, you could use the following command to execute macros \dac{At}\dac{StartBuildset}\brackets{\meta{FrontPageContents}}. Anything you send in to \dac{At}\dac{StartBuildset} will be executed before the first problem starts:
 \begin{dispListing}
   \At\StartBuildset{
     \input{myFrontpage}
