--- a/src/main.tex
+++ b/src/main.tex
@@ -15,29 +15,29 @@
 \def\hello{\textbf{Hello}}
 \def\asdf#1{\@latex@warning{Called hello}#1}
 % Testing all makeset functions
-% \makeset[nohead,intro]{11}{%
-% \phead,
-% \exclude{secondexercise}{2,3},
-% \pbreak,
-% \phead,
-% \exec{\textbf{hello}},
-% firstexercise,
-% \select{thirdexercise}{1,2}%
-% }
-\makeset{11}{secondexercise,
+\makeset[nohead,intro]{11}{%
+\phead,
+\exclude{secondexercise}{2,3},
+\pbreak,
+\phead,
+\exec{\textbf{hello}},
 firstexercise,
-thirdexercise%
+\select{thirdexercise}{1,2}%
 }
+% \makeset{11}{secondexercise,
+% firstexercise,
+% thirdexercise%
+% }
 % \DisplaySolutions
 % Different function tests
 % \makeset[nohead,intro]{11}{\phead,\exclude{secondexercise}{2,3},secondexercise}
 % \makeset[nohead,intro]{11}{\phead,thirdexercise, secondexercise, firstexercise}
 % \makeset[nohead,intro]{11}{thirdexercise}
 % \makeset[nohead,intro]{11}{\phead}
-\makeset[nohead,intro]{12}{\phead,thirdexercise, secondexercise, firstexercise}
-\At\StartBuildset{
-BEFORE THE SET
-}
+% \makeset[nohead,intro]{12}{\phead,thirdexercise, secondexercise, firstexercise}
+% \At\StartBuildset{
+% BEFORE THE SET
+% }
 
 \begin{document}
 \buildset{11}
