--- a/src/preamble.tex
+++ b/src/preamble.tex
@@ -6,7 +6,7 @@
 % Compilation wont work unless \end{problem}, \end{solution} and \end{intro} are on their own lines and without any spaces. This warning can be removed by doing \def\ownLineNoSpacesGotIt{} before \usepackage{exbank}.
 %:-
 \makeatletter
-\PackageWarningNoLine{exercisebank-@@VERSION}{This package is in the alpha stage, and if something unexpected happens please, oh pretty please, report it to https://github.com/Strauman/exerciseBank. Thank you!}
+\PackageWarningNoLine{exercisebank-@@VERSION}{This package is in the beta stage, and if something unexpected happens please, oh pretty please, report it to https://github.com/Strauman/exercisebank. Thank you!}
 \@ifundefined{ownLineNoSpacesGotIt}{
 \@latex@warning{Compilation wont work unless \string\end{problem} and \string\end{solution} are on their own lines and without any spaces. This warning can be removed by doing \string\def\string\ownLineNoSpacesGotIt{} before \@backslashchar usepackage{exercisebank}}
 }{}
